--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -15,17 +16,18 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Nolanw</h1>
-        <p>My site for whatever</p>
-
-        <p class="view"><a href="https://github.com/nolwat/NolanW">View the Project on GitHub <small>nolwat/NolanW</small></a></p>
-
+        <h1 class="header">Nolanw</h1>
+        <p class="header">My site for whatever</p>
 
         <ul>
-          <li><a href="https://github.com/nolwat/NolanW/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/nolwat/NolanW/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/nolwat/NolanW">View On <strong>GitHub</strong></a></li>
+          <li class="download"><a class="buttons" href="https://github.com/nolwat/NolanW/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/nolwat/NolanW/tarball/master">Download TAR</a></li>
+          <li><a class="buttons github" href="https://github.com/nolwat/NolanW">View On GitHub</a></li>
         </ul>
+
+        <p class="header">This project is maintained by <a class="header name" href="https://github.com/nolwat">nolwat</a></p>
+
+
       </header>
       <section>
         <h3>
@@ -61,11 +63,10 @@ $ git checkout gh-pages
 <p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/nolwat">nolwat</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+		
   </body>
 </html>
